# ppk

./: .install.sh  .pylintrc  MANIFEST.in  Makefile  NOTICE  README.md  build.sh  checklist.rst  ppk.py  ppk.sh  pyproject.toml  setup.py
lib/: about.py  argparser.py  config.json  config.py  pack.py  pip.py  requirements.txt  upack.py  utilities.py  vtests.py
lib/upack.d/include/: base.h  utils.h
lib/upack.d/src/: Makefile  base.h  checks.c  checks.h  config.c  config.toml  filesys.c  filesys.h  ui.c  upack  upack.c  utils.c  utils.h
meta/deployment/scripts/: extract.sh
ppk/: pack.py  upack.py
ppk/libs/: about.py  argparser.py  config.py  config.toml  pack.py  tests.py  upack.py  utilities.py
ppk/libs/upack/: Makefile  base.h  checks.c  checks.h  filesys.c  filesys.h  ui.c  ui.h  upack  upack.c  utils.c  utils.h
ppk/libs/upack.d/: Makefile
ppk/libs/upack.d/include/: config.h  filesys.h  ui.h
ppk/libs/upack.d/src/: filesys.c  toml.c  upack.c  utils.c
pylintr/: generate_rcfile.sh  pylintr.sh
pylintr/results/: bin_ppk.plr  lib_about.plr  lib_argparser.plr  lib_config.plr  lib_pack.plr  lib_pip.plr  lib_upack.plr  lib_utilities.plr  lib_vtests.plr  libs_about.plr  libs_argparser.plr  libs_config.plr  libs_pack.plr  libs_tests.plr  libs_upack.plr  libs_utilities.plr  ppk.plr  ppk_pack.plr  ppk_upack.plr  setup.plr  summary.plr  tests_test_pack.plr
tests/: .coverage  test_pack.py
tests/resources/test03d__main__requirements__win_amd64__312/: requirements.txt
