[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ppk"
description = "Python library and dependency integrity checking utility."
authors = [{name = "The Developers", email = "development@s3dev.uk"}]
classifiers = [
               "Environment :: Console",
               "Development Status :: 4 - Beta",
               "Intended Audience :: Developers",
               "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: C",
               "Programming Language :: Python :: 3.6",
               "Programming Language :: Python :: 3.7",
               "Programming Language :: Python :: 3.8",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: Implementation :: CPython",
               "Topic :: Software Development",
               "Topic :: Software Development :: Libraries",
               "Topic :: Utilities",
              ]
dependencies = [
                "beautifulsoup4",
                "requests>=2.32.2",     # Per Snyk
                "setuptools>=70.0.0",   # Per Snyk
                "utils4>=1.5.0",
               ]
dynamic = ["version"]
keywords = ["library", "security", "utility", "utilities"]
license = {text = "GPL-v3"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"

[project.urls]
Documentation = "https://github.com/s3dev/ppk"
Homepage = "https://github.com/s3dev/ppk"
Repository = "https://github.com/s3dev/ppk"

[tool.setuptools.dynamic]
version = {attr = "lib._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = []
